# yeet

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  flake.nix  justfile  yeet.code-workspace
.github/workflows/: ci.yml  release.yml
defaults/: config.toml  style.css
docs/: feat-open-on-active-monitor.md
packaging/: yeet-launcher.spec
specs/: fix-three-github-issues.md
src/: config.rs  desktop.rs  history.rs  main.rs  ui.rs
