[package]
name = "yeet-launcher"
version = "0.2.0"
edition = "2021"
authors = ["1337hero"]
description = "A fast, minimal, configurable app launcher for Wayland"
license = "GPL-3.0-only"
repository = "https://github.com/1337hero/yeet"
keywords = ["launcher", "linux", "gtk", "desktop"]
categories = ["gui", "command-line-utilities"]
rust-version = "1.70"
include = ["src/", "defaults/", "LICENSE", "README.md", "CHANGELOG.md"]

# the crates.io name "yeet" is squatted; the binary is still yeet
[[bin]]
name = "yeet"
path = "src/main.rs"

[dependencies]
gtk4 = "0.10"
fuzzy-matcher = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6"
freedesktop-desktop-entry = "0.7"
gtk4-layer-shell = "0.7"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.deb]
maintainer = "Mike Key <mike@mk3y.com>"
section = "utils"
priority = "optional"
depends = "libgtk-4-1, libgtk4-layer-shell0"
extended-description = "A fast, minimal, configurable app launcher for Wayland compositors (Hyprland, Sway, and other wlroots-based compositors, plus KDE Plasma). Fuzzy search with launch-history ranking, TOML/CSS configuration, and a dmenu mode."
assets = [
    ["target/release/yeet", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/yeet-launcher/", "644"],
]
